--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.4.1",
     "@mui/material": "^6.4.1",
     "@mui/x-date-pickers": "^7.24.1",
+    "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "date-fns": "^4.1.0",
     "file-saver": "^2.0.5",
